2012-06-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	
	* godmode/reporting/reporting_builder.list_items.php
	 godmode/reporting/graph_builder.php
	 godmode/reporting/graph_builder.graph_editor.php: Added code to 
	 support metaconsole in custom graphs (but commented due to database
	 support is not implemented)

2012-06-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/reporting/reporting_builder.list_items.php
	 godmode/reporting/graph_builder.php
	 godmode/reporting/graph_builder.graph_editor.php: Fixed sql error
	when there are no modules selected in custom graph builder.

2012-06-07  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_ui.php: fixed bug: string truncation
	didn't always work for multi-byte characters.

2012-06-07 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Deleted a debug trace for js

2012-06-07 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_groups.php
	operation/tree.php: Fixed and improved performance for
	group tree view.

2012-06-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_menu.php
	 include/styles/pandora_minimal.css
	 operation/extensions.php
	 operation/menu.php
	 general/header.php
	 godmode/extensions.php
	 godmode/menu.php: Invalid menu entries hided in metaconsola and 
	 added image in header. Also added info_box css attributes in
	 pandora_minimal css file.

2012-06-06  Ramon Novoa  <rnovoa@artica.es>

	* include/db/postgresql.php,
	  include/db/mysql.php,
	  include/db/oracle.php,
	  include/config_process.php,
	  include/functions_db.php,
	  operation/agentes/datos_agente.php: Fixed and improved the history
	  database feature.

2012-06-06  Vanessa Gil <vanessa.gil@artica.es>

	* operation/agentes/exportdata.php: Added help tip.

2012-06-06  Vanessa Gil <vanessa.gil@artica.es>

	* operation/agentes/exportdata.php: Fixed bug:
	If the data type of module is string, don't export the data in format: table, Excel or CSV.
